--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,11 @@
   --light-color-text: #606770;
   --button-link: #e0e2e8;
   --stories-bg: #090909;
+  --icon-circle-bg: linear-gradient(
+    0deg,
+    rgba(65, 67, 69, 1) 0%,
+    rgba(107, 110, 114, 1) 100%
+  );
 }
 
 body {
@@ -199,6 +204,10 @@ header {
   display: flex;
 }
 
+.sidenav {
+  width: 25%;
+}
+
 .sidenav__item {
   display: flex;
   align-items: center;
@@ -210,6 +219,8 @@ header {
   height: 40px;
   width: 40px;
   margin-right: 20px;
+  object-fit: cover;
+  object-position: center;
 }
 
 .sidenav__item-title {
@@ -251,9 +262,11 @@ header {
 }
 
 .sidenav__item-icon--circle-white {
-  background: var(--fb-blue);
+  background: var(--icon-circle-bg);
   border-radius: 50%;
   font-size: 1rem;
+  width: 35px;
+  height: 35px;
 }
 
 .sidenav__item-icon .fas,
@@ -269,4 +282,18 @@ header {
 .sidenav__item-icon--circle-white .fas,
 .sidenav__item-icon--circle-white .fab {
   color: var(--fb-whitebg);
+}
+
+.sidenav__line {
+  height: 3px;
+  background: var(--button-link);
+  margin-bottom: 15px;
+  display: block;
+}
+
+.sidenav__heading-title {
+  display: block;
+  color: var(--light-color-text);
+  font-size: 1.1rem;
+  margin-bottom: 15px;
 }
