--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,7 @@
     rgba(65, 67, 69, 1) 0%,
     rgba(107, 110, 114, 1) 100%
   );
+  --shadow-color: rgba(0, 0, 0, 0.25);
 }
 
 body {
@@ -608,4 +609,51 @@ header {
 
 .photopost__link .fas {
   margin-right: 10px;
+}
+
+.floatingmsg {
+  position: fixed;
+  bottom: 0;
+  right: 20px;
+}
+
+.floatingmsg__bubble {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  box-shadow: 0px 5px 10px 0px var(--shadow-color);
+  background: var(--button-link);
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  cursor: pointer;
+}
+
+.floatingmsg__bubble img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+.floatingmsg__bubble:hover .fa-edit {
+  color: var(--fb-blue);
+}
+
+.floatingmsg__notification {
+  background: var(--fb-red);
+  color: white;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  font-size: 0.8rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  font-weight: 700;
+  z-index: 3;
 }
