--- a/css/styles.css
+++ b/css/styles.css
@@ -96,6 +96,14 @@ header {
   padding-left: 35px;
   font-weight: 300;
   border: none;
+  margin-right: 20px;
+}
+
+.header__mobile-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.7rem;
 }
 
 .header__menu-tabs {
@@ -674,4 +682,37 @@ header {
   right: -5px;
   font-weight: 700;
   z-index: 3;
+}
+
+@media only screen and (max-width: 1300px) {
+  .header__menu-tabs {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+}
+
+@media only screen and (max-width: 768px) {
+  .header__user-img {
+    display: none;
+  }
+  .header__user-name {
+    display: none;
+  }
+  .header__logo-search .fa-search {
+    left: 12px;
+    top: 12px;
+  }
+  .header__logo-search input[type="text"] {
+    width: 40px;
+    height: 40px;
+    padding: 0;
+  }
+  .header__logo-search input::placeholder {
+    opacity: 0;
+  }
+}
+
+@media only screen and (max-width: 320px) {
 }
