--- a/css/styles.css
+++ b/css/styles.css
@@ -100,7 +100,7 @@ header {
 }
 
 .header__mobile-button {
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   font-size: 1.7rem;
@@ -688,9 +688,15 @@ header {
   .header__menu-tabs {
     display: none;
   }
+  .feed {
+    width: 100%;
+  }
 }
 
 @media only screen and (max-width: 1000px) {
+  .sidenav {
+    display: none;
+  }
 }
 
 @media only screen and (max-width: 768px) {
@@ -712,7 +718,31 @@ header {
   .header__logo-search input::placeholder {
     opacity: 0;
   }
+  .header__mobile-button {
+    display: flex;
+  }
+  .feed {
+    display: block;
+  }
+  .stories {
+    flex-wrap: nowrap;
+    z-index: 9;
+    padding-bottom: 20px;
+    overflow-x: scroll;
+  }
+  .stories__video-container {
+    flex: 1 0 auto;
+  }
+  .content-area--feed {
+    width: 100%;
+  }
 }
 
-@media only screen and (max-width: 320px) {
+@media only screen and (max-width: 411px) {
+  .header-account {
+    display: none;
+  }
+  .post-types__title {
+    display: none;
+  }
 }
